--- a/src/style/SideBar.scss
+++ b/src/style/SideBar.scss
@@ -1,5 +1,3 @@
-
-
 .logo {
     padding: 1rem;
 
@@ -7,66 +5,91 @@
         width: 100px;
         height: 80px;
     }
-
-    
 }
 
-.ant-menu.ant-menu-vertical{
-    min-height: 76vh;
-    .ant-menu-item{
-
-        .nav-link img{
-            margin-right: .5rem;
+.ant-menu.ant-menu-vertical {
+    .ant-menu-item,
+    .ant-menu-submenu {
+        .nav-link img {
+            margin-right: 0.5rem;
         }
-        
-        &:hover{
-            background-color: #FF7506;
-            .nav-link{
+
+        &:hover {
+            background-color: #ff7506;
+            .nav-link {
                 color: white;
             }
-            img{
+            img {
                 filter: brightness(0) invert(1);
             }
         }
     }
 
-    .ant-menu-item-selected{
-        background-color: #FF7506;
-        .nav-link{
+    .ant-menu-item-selected,
+    .ant-menu-submenu-active.ant-menu-submenu-open.ant-menu-submenu-vertical {
+        background-color: #ff7506;
+        .nav-link,
+        .ant-menu-title-content {
             color: white;
         }
-        img{
+        img {
             filter: brightness(0) invert(1);
         }
-
+    }
+    .ant-menu-submenu-active.ant-menu-submenu-vertical{
+        .nav-link,
+        .ant-menu-title-content {
+            color: black;
+        }
     }
 
-    
+    .ant-menu-submenu-open {
+        .ant-menu-submenu-arrow {
+            color: white;
+        }
+    }
+
+    .submenuContainer {
+        filter: drop-shadow(3px 3px 4px rgba(70, 64, 67, 0.1));
+        border-radius: 12px;
+        li.ant-menu-item-selected {
+            background: none !important;
+            a.nav-link {
+                color: black !important;
+            }
+
+            &:hover {
+                background: #ff7506 !important;
+                a.nav-link {
+                    color: white !important;
+                }
+            }
+        }
+    }
 }
 
-.logOut{
+.logOut {
+    margin-top: 35vh;
     text-align: center;
-    button{
+    button {
         width: 176px;
         height: 48px;
         background-color: #ffecdd;
-        border:none;
+        border: none;
         border-radius: 8px;
         text-align: left;
-        color: #FF7506;
+        color: #ff7506;
 
-        img{
-            margin-right: .5rem ;
+        img {
+            margin-right: 0.5rem;
         }
-    
-        &:hover{
-            background: #FF7506;
+
+        &:hover {
+            background: #ff7506;
             color: white;
-            img{
+            img {
                 filter: brightness(0) invert(1);
             }
         }
     }
-
-   
 }
