--- a/src/style/dichvu/DichVu.scss
+++ b/src/style/dichvu/DichVu.scss
@@ -1,8 +1,7 @@
-.thietbiContainer {
+.dichvuContainer {
     padding: 1rem 2rem;
-    
 
-    .thietBiListContainer {
+    .dichVuListContainer {
         .ant-input-search {
             &:hover {
                 outline: none;
@@ -10,7 +9,7 @@
             button {
                 border-left: none;
                 background: white;
-                &:hover{
+                &:hover {
                     background: none;
                 }
 
@@ -22,7 +21,7 @@
         .tableContainer {
             justify-content: space-between;
 
-            .thietbiTable {
+            .dichVuTable {
                 .ant-table-thead {
                     tr {
                         padding: 1rem 17px;
@@ -43,25 +42,19 @@
                     }
                 }
 
-                .textDichvu{
-                    .contentDichVu{
+                .textDichvu {
+                    .contentDichVu {
                         margin: 0;
-                        display:-webkit-box;
+                        display: -webkit-box;
                         -webkit-line-clamp: 1;
-                        -webkit-box-orient: vertical;  
+                        -webkit-box-orient: vertical;
                         overflow: hidden;
-                    }
-                    
-                    .more{
-                        &:focus + .contentDichVu {
-                            display: block !important;
-                        }
                     }
                 }
             }
         }
 
-        button.add_thietbi {
+        button.add_dichvu {
             width: 80px;
             color: #ff7506;
             position: absolute;
@@ -86,7 +79,7 @@
                 &:focus {
                     outline: #ffac6a !important;
                     border-color: #ffac6a;
-                    box-shadow: 0 0 .5px #ffac6a;
+                    box-shadow: 0 0 0.5px #ffac6a;
                 }
                 &:hover {
                     outline: #ffac6a !important;
@@ -94,11 +87,11 @@
                 }
             }
             .ant-select-selector,
-            .ant-select-show{
+            .ant-select-show {
                 &:focus {
                     outline: #ffac6a !important;
                     border-color: #ffac6a !important;
-                    box-shadow: 0 0 .5px #ffac6a !important;
+                    box-shadow: 0 0 0.5px #ffac6a !important;
                 }
                 &:hover {
                     outline: #ffac6a !important;
@@ -114,6 +107,26 @@
                 border-radius: 9px;
                 svg {
                     color: white;
+                }
+            }
+
+            .checkboxCapSo {
+                .ant-checkbox-wrapper {
+                    width: 100%;
+                    padding: 0;
+                    margin: 5px 0;
+
+                    .ant-checkbox-inner {
+                        border-color: #4277ff;
+                        width: 20px;
+                        height: 20px;
+                        border-radius: 4px;
+                    }
+                    span span.content {
+                        text-align: left;
+                        display: inline-block;
+                        width: 150px;
+                    }
                 }
             }
         }
@@ -180,49 +193,100 @@
                 }
             }
         }
-        
-        .ant-select-selector,
-            .ant-select-show{
-                &:focus {
-                    outline: #ffac6a !important;
-                    border-color: #ffac6a !important;
-                    box-shadow: 0 0 .5px #ffac6a !important;
-                }
-                &:hover {
-                    outline: #ffac6a !important;
-                    border-color: #ffac6a !important;
-                }
-            }
-            .dichvuSelect .ant-select-selection-item {
-                color: white;
-                background: #ffac6a;
-                /* down */
 
-                box-shadow: 0px 0px 6px #e7e9f2;
-                border-radius: 9px;
-                svg {
-                    color: white;
-                }
+        .ant-select-selector,
+        .ant-select-show {
+            &:focus {
+                outline: #ffac6a !important;
+                border-color: #ffac6a !important;
+                box-shadow: 0 0 0.5px #ffac6a !important;
             }
+            &:hover {
+                outline: #ffac6a !important;
+                border-color: #ffac6a !important;
+            }
+        }
+        .dichvuSelect .ant-select-selection-item {
+            color: white;
+            background: #ffac6a;
+            /* down */
+
+            box-shadow: 0px 0px 6px #e7e9f2;
+            border-radius: 9px;
+            svg {
+                color: white;
+            }
+        }
     }
 
-    .detailThietbiContainer {
+    .detailDichVuContainer {
         .thongtinContainer {
             height: 80vh;
-            padding: 1rem;
-            background: #ffffff;
-            /* Shadowbox */
 
-            box-shadow: 2px 2px 8px rgba(232, 239, 244, 0.8);
-            border-radius: 16px;
+            .thongtin {
+                margin-right: 1rem;
+                padding: 1rem;
+                background: white;
+                box-shadow: 2px 2px 8px rgba(232, 239, 244, 0.8);
+                border-radius: 16px;
+            }
+
+            .bangThongTin {
+                padding: 1rem;
+                background: white;
+                box-shadow: 2px 2px 8px rgba(232, 239, 244, 0.8);
+                border-radius: 16px;
+            }
 
             .infoField {
                 margin-bottom: 1rem;
                 .tittleInfo {
                     display: inline-block;
-                    width: 150px;
+                    width: 100px;
                     font-weight: bold;
                 }
+            }
+
+            .thietbiTable {
+                border-radius: 32px 32px 0 0;
+                thead {
+                    tr {
+                        th {
+                            background: #ff9138;
+                            color: white;
+                        }
+                    }
+                }
+                tbody {
+                    tr:nth-child(1n) {
+                        background: #ffffff;
+                    }
+                    tr:nth-child(2n) {
+                        background: #fff2e7;
+                    }
+                }
+            }
+        }
+        .btn-group {
+            background: #fff2e7;
+            padding: 0 5px;
+            width: 80px;
+            display: flex;
+            flex-direction: column;
+
+            position: absolute;
+            top: 20%;
+            right: 0;
+
+            border-radius: 8px 0px 0px 8px;
+
+            button {
+                background: #fff2e7;
+                color: #ff7506;
+                border: none;
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 19px;
             }
         }
     }
