update full project

--- a/src/App.scss
+++ b/src/App.scss
@@ -117,3 +117,12 @@
         }
     }
 }
+
+.loading {
+    margin: 20px 0;
+    margin-bottom: 20px;
+    padding: 30px 50px;
+    text-align: center;
+    background: none;
+    border-radius: 4px;
+  }
